--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@cityofzion/neon-js": "^4.8.1",
+    "@ont-dev/ontology-dapi": "^0.5.7",
     "axios": "^0.20.0",
     "bignumber.js": "^9.0.0",
     "bn.js": "^5.1.3",
@@ -25,6 +26,7 @@
     "neo-dapi": "^2.0.4",
     "normalize.css": "^8.0.1",
     "number-to-bn": "^1.7.0",
+    "ontology-ts-sdk": "^1.1.19",
     "promise-deferred": "^2.0.3",
     "query-string": "^6.13.1",
     "serializr": "^1.5.3",
